# Agentic-AI-Website-Builder

./: .env.example  .gitignore  Makefile  README.md  SETUP.md  pyproject.toml
scripts/: deploy_production.py  run_dev.py  run_tests.py  verify_setup.py
src/agentic_web_app_builder/: __init__.py
src/agentic_web_app_builder/agents/: __init__.py  base.py  developer.py  developer_factory.py  monitor.py  monitor_factory.py  planner.py  tester.py  tester_factory.py
src/agentic_web_app_builder/agents/planning/: __init__.py  approval_workflow.py  dependency_analyzer.py  execution_planner.py
src/agentic_web_app_builder/api/: __init__.py  main.py  main.py.old  monitoring_integration.py  testing_integration.py
src/agentic_web_app_builder/core/: __init__.py  config.py  database.py  feedback_manager.py  interfaces.py  preview_manager.py  state_manager.py
src/agentic_web_app_builder/models/: __init__.py  base.py  events.py  feedback.py  governance.py  project.py
src/agentic_web_app_builder/static/: app.js  index.html
src/agentic_web_app_builder/tools/: __init__.py  alert_manager.py  code_generation.py  deployment.py  error_tracking.py  git_operations.py  health_monitoring.py  integration_testing.py  interfaces.py  llm_service.py  log_analyzer.py  monitoring_interfaces.py  monitoring_test.py  notification_system.py  test_failure_analyzer.py  testing_interfaces.py  ui_testing.py  unit_testing.py
src/agentic_web_app_builder/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py
